<?xml version="1.0"?>

<resources>

    <string name="app_name">Don8</string>

    <string name="action_sign_in_short">Register</string>

    <string name="email">Email</string>

    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>

    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>

    <string name="change_email">Change Email</string>

    <string name="bio">Bio</string>

    <string name="help">Move into range of the busker to view their profile and make a donation.</string>

    <string name="history">Busker Donation History</string>

    <string name="welcome">Welcome!</string>

    <string name="About">This app was built by Gary Carr. Its aim is to help raise more money for buskers from the general public as not everyone has spare change on them. The app works with Estimote beacons so that users can view the buskers profile when in range of their beacon.</string>

    <string name="change_password">Change Password</string>

    <string name="Note">Notes: Enter the UUID to assign a beacon to a busker.</string>

    <string name="Busker_One">Busker 1</string>

    <string name="send_password_reset_email">Send Password reset email</string>

    <string name="remove_user">Delete Account</string>

    <string name="donation_amount">Donation Amount:</string>

    <string name="new_pass">New Password</string>

    <string name="title_activity_profile">Firebase</string>

    <string name="title_activity_login">Sign in</string>

    <string name="hint_email">Email</string>

    <string name="hint_password">Password</string>

    <string name="hint_name">Full Name</string>

    <string name="btn_login">LOGIN</string>

    <string name="btn_link_to_register">Not a member? Register Don8 Account!</string>

    <string name="btn_link_to_login">Already registered. Login Me!</string>

    <string name="title_activity_reset_password">ResetPasswordActivity</string>

    <string name="complete_profile">Complete Profile Details</string>

    <string name="save_profile">Save Profile</string>

    <string name="home">Home</string>

    <string name="busker">Busker</string>

    <string name="sign_out">Sign Out</string>

    <string name="choose_photo">Choose Profile Picture</string>

    <string name="btn_forgot_password">Forgot your password?</string>

    <string name="btn_reset_password">Reset Password</string>

    <string name="radio_male">Male</string>

    <string name="radio_female">Female</string>

    <string name="btn_back">

<![CDATA[<< Back]]>
</string>

    <string name="hint_new_email">New Email</string>

    <string name="hint_age">Age</string>

    <string name="btn_change">Change</string>

    <string name="btn_send">Send</string>

    <string name="btn_remove">Remove</string>

    <string name="btn_sign_out">Sign Out</string>

    <string name="lbl_forgot_password">Forgot password?</string>

    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="title_activity_busker_home">BuskerHome</string>
    <string name="title_activity_busker_profile">Complete Profile Details</string>
    <string name="title_activity_user_home">Home</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="date_of_birth">Date of Birth</string>

    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_user_home2">userHomeActivity2</string>

</resources>
